--- a/Framework2082/QOLFreeLoadSpeedIncrease.csproj
+++ b/Framework2082/QOLFreeLoadSpeedIncrease.csproj
@@ -8,6 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Reference Include="com.nikkorap.blueprinter">
+	    <HintPath>..\..\..\..\Downloads\com.nikkorap.blueprinter_1.5.0.dll</HintPath>
+	  </Reference>
 	  <Reference Include="qol">
 	    <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Nuclear Option\BepInEx\plugins\qol_1.1.5.1.dll</HintPath>
 	  </Reference>
